Fix header z-index

--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -83,5 +83,5 @@
     margin: auto;
     flex-wrap: wrap;
     justify-content: space-between;
-
+    padding-bottom: 100px;
 }
